# rusty_monads

./: Cargo.toml  readme.md
src/: foo.rs  lib.rs  main.rs
